--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -24,6 +24,7 @@ body {
   padding: 30px;
   border-radius: 6px;
   box-shadow: 0 0 10px #fff5;
+  max-width: 900px;
 }
 .title {
   text-align: center;
@@ -80,4 +81,37 @@ li {
   width: 100%;
   margin: 0;
 
+}
+.card:hover {
+  background-color: #0093;
+  
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 20px;
+  height: 50px;
+  border-top: 1px solid #e9ecef;
+  border-radius: 0 0 8px 8px;
+  margin-top: 10px;
+}
+
+.footer-text {
+  margin: 0;
+  color: #6c757d;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.clear-all-button {
+  background-color: #dc3545;
+  color: white;
+  border: none;
+  padding: 0px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: 500;
 }
